test: Arrays.asList()를 List.of()로 변경