@@ -1,6 +1,7 @@
 package racingcar.controller.provider;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.params.provider.Arguments;
@@ -10,41 +11,41 @@ public class GameControllerTestProvider {
     public static Stream<Arguments> provideForInitGameTest() {
         return Stream.of(
                 Arguments.of(
-                        Arrays.asList("hello, poby, ifif, hanul", "3"),
-                        Arrays.asList("hello", "poby", "ifif", "hanul"), 3),
+                        List.of("hello, poby, ifif, hanul", "3"),
+                        List.of("hello", "poby", "ifif", "hanul"), 3),
                 Arguments.of(
-                        Arrays.asList("hanul, poby, ifif", "2"),
-                        Arrays.asList("hanul", "poby", "ifif"), 2)
+                        List.of("hanul, poby, ifif", "2"),
+                        List.of("hanul", "poby", "ifif"), 2)
         );
     }
 
     public static Stream<Arguments> provideForGetCarStatusesTest() {
         return Stream.of(
                 Arguments.of(
-                        Arrays.asList("hello, poby, ifif, hanul", "1"),
-                        Arrays.asList(true, true, false, false),
-                        Arrays.asList(1, 1, 0, 0)),
+                        List.of("hello, poby, ifif, hanul", "1"),
+                        List.of(true, true, false, false),
+                        List.of(1, 1, 0, 0)),
                 Arguments.of(
-                        Arrays.asList("hanul, poby, ifif", "2"),
-                        Arrays.asList(
+                        List.of("hanul, poby, ifif", "2"),
+                        List.of(
                                 true, true, false,
                                 false, true, false),
-                        Arrays.asList(1, 2, 0))
+                        List.of(1, 2, 0))
         );
     }
 
     public static Stream<Arguments> provideForGetWinnerNamesTest() {
         return Stream.of(
                 Arguments.of(
-                        Arrays.asList("hello, poby, ifif, hanul", "1"),
-                        Arrays.asList(true, true, false, false),
-                        Arrays.asList("hello", "poby")),
+                        List.of("hello, poby, ifif, hanul", "1"),
+                        List.of(true, true, false, false),
+                        List.of("hello", "poby")),
                 Arguments.of(
-                        Arrays.asList("hanul, poby, ifif", "2"),
-                        Arrays.asList(
+                        List.of("hanul, poby, ifif", "2"),
+                        List.of(
                                 true, true, false,
                                 false, true, false),
-                        Arrays.asList("poby"))
+                        List.of("poby"))
         );
     }
 
