@@ -1,6 +1,7 @@
 package racingcar.domain.car.provider;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.params.provider.Arguments;
@@ -16,44 +17,44 @@ class CarsTestProvider {
 
     public static Stream<Arguments> provideForEmptyExceptionTest() {
         return Stream.of(
-                Arguments.of(Arrays.asList("")),
-                Arguments.of(Arrays.asList("if", "hanul", ""))
+                Arguments.of(List.of("")),
+                Arguments.of(List.of("if", "hanul", ""))
         );
     }
 
     public static Stream<Arguments> provideForLengthExceptionTest() {
         return Stream.of(
-                Arguments.of(Arrays.asList("slow", "if", "hanull")),
-                Arguments.of(Arrays.asList("sinb57", "slow", "if")),
-                Arguments.of(Arrays.asList("sinb57", "slow", "if", "hanull"))
+                Arguments.of(List.of("slow", "if", "hanull")),
+                Arguments.of(List.of("sinb57", "slow", "if")),
+                Arguments.of(List.of("sinb57", "slow", "if", "hanull"))
         );
     }
 
     public static Stream<Arguments> provideForDuplicateExceptionTest() {
         return Stream.of(
-                Arguments.of(Arrays.asList("slow", "if", "slow")),
-                Arguments.of(Arrays.asList("slow", "if", "test", "test"))
+                Arguments.of(List.of("slow", "if", "slow")),
+                Arguments.of(List.of("slow", "if", "test", "test"))
         );
     }
 
     public static Stream<Arguments> provideForConstructorTest() {
         return Stream.of(
-                Arguments.of(Arrays.asList("slow", "if", "poby", "hello")),
-                Arguments.of(Arrays.asList("poby", "sinb", "slow", "hello")),
-                Arguments.of(Arrays.asList("123", "a-bd", "cc sd", "a"))
+                Arguments.of(List.of("slow", "if", "poby", "hello")),
+                Arguments.of(List.of("poby", "sinb", "slow", "hello")),
+                Arguments.of(List.of("123", "a-bd", "cc sd", "a"))
         );
     }
 
     public static Stream<Arguments> provideForPlayRoundTest() {
         return Stream.of(
                 Arguments.of(
-                        Arrays.asList("slow", "if", "poby"),
-                        1, Arrays.asList(false, true, true),
-                        Arrays.asList("slow : ", "if : -", "poby : -")),
+                        List.of("slow", "if", "poby"),
+                        1, List.of(false, true, true),
+                        List.of("slow : ", "if : -", "poby : -")),
                 Arguments.of(
-                        Arrays.asList("slow", "if", "poby"),
-                        2, Arrays.asList(false, true, true, true, false, true),
-                        Arrays.asList(
+                        List.of("slow", "if", "poby"),
+                        2, List.of(false, true, true, true, false, true),
+                        List.of(
                                 "slow : ", "if : -", "poby : -",
                                 "slow : -", "if : -", "poby : --"))
         );
@@ -62,13 +63,13 @@ class CarsTestProvider {
     public static Stream<Arguments> provideForGetWinnerNamesTest() {
         return Stream.of(
                 Arguments.of(
-                        Arrays.asList("slow", "if", "poby"),
-                        1, Arrays.asList(false, true, true),
-                        Arrays.asList("if", "poby")),
+                        List.of("slow", "if", "poby"),
+                        1, List.of(false, true, true),
+                        List.of("if", "poby")),
                 Arguments.of(
-                        Arrays.asList("slow", "if", "poby"),
-                        2, Arrays.asList(false, true, true, true, false, true),
-                        Arrays.asList("poby"))
+                        List.of("slow", "if", "poby"),
+                        2, List.of(false, true, true, true, false, true),
+                        List.of("poby"))
         );
     }
 
